--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <h5>Personal Website</h5>
     <p>Passionate student who loves tecnology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
 <ul>
-    <li><a href="#"><i class="fa-brands fa-github-square"></i></a></li>
-    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+    <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin"></i></a></li>
 </ul>  
 </div>
     </body>
