--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Borja Souto Prego</title>  
     </head>
     <body>
-<div class=""box">
+<div class="box">
     <img src="profile.jpg" alt="" class="box-img">
     <h1>Borja Souto Prego</h1>
     <h5>Personal Website</h5>
