--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+        <script src="https://kit.fontawesome.com/f61f534874.js" crossorigin="anonymous"></script>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -19,8 +19,8 @@
     <h5>Personal Website</h5>
     <p>Passionate student who loves tecnology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
 <ul>
-    <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square"></i></a></li>
-    <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin"></i></a></li>
+    <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>  
 </div>
     </body>
