--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="profile.jpg" alt="" class="box-img">
     <h1>Borja Souto</h1>
     <h5>Personal Website</h5>
-    <p>Passionate student who loves technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
+    <p style="text-align:center">Passionate student who loves technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
 <ul>
     <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a></li>
     <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
