--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
-        <title>Borja Souto Prego</title>  
+        <title>Borja Souto</title>  
     </head>
     <body>
 <div class="box">
-    <img src="profile.jpg" alt="" class="box-img">
-    <h1>Borja Souto</h1>
-    <h5>Personal Website</h5>
-    <p style="text-align:center">Hi! I'm a Data Science and Engineering student at the University of A Coruña. I love technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
+    <h1>Hi! I'm Borja</h1>
+    <p style="text-align:center">I'm a Data Science and Engineering student at the University of A Coruña. I love technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
 <ul>
     <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a></li>
     <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
