--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
-        <title>Borja Souto</title>  
+        <title>borjasouto.es</title>  
     </head>
     <body>
 <div class="box">
     <h1>Hi! I'm Borja</h1>
-    <p style="text-align:center">I'm a Data Science and Engineering student at the University of A Coruña. I love technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
+    <p style="text-align:center">I'm a Data Science and Engineering student at the <Link href='https://www.google.es/maps/place/Facultad+de+Inform%C3%A1tica+-+UDC/@43.3328886,-8.4131229,17z/data=!4m6!3m5!1s0xd2e7cb3d82865e7:0x426ea83b7a5a451f!4b1!8m2!3d43.3328847!4d-8.4109342?hl=es'>
+        <a target='_blank' className='transition-colors hover:text-[#CFB495]'>University of A Coruña</a>
+      </Link>. I love technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
 <ul>
     <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a></li>
     <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
