--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>borjasouto.es</title>  
     </head>
     <body>
-<div class="box" className='h-[100px] flex flex-col justify-center'>
+<div className='h-[100px] flex flex-col justify-center'>
     <h1>Hi! I'm Borja</h1>
     <p style="text-align:center">I'm a Data Science and Engineering student at the <a href='https://www.google.es/maps/place/Facultad+de+Inform%C3%A1tica+-+UDC/@43.3328886,-8.4131229,17z/data=!4m6!3m5!1s0xd2e7cb3d82865e7:0x426ea83b7a5a451f!4b1!8m2!3d43.3328847!4d-8.4109342?hl=es'>University of A Coruña.</a>
         I love technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
