--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://kit.fontawesome.com/f61f534874.js" crossorigin="anonymous"></script>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <title>borjasouto.es</title>  
-    </head>
-    <body>
-<div class="box" className='h-[100px] flex flex-col justify-center'>
-    <h1>Hi! I'm Borja</h1>
-    <p style="text-align:center">I'm a Data Science and Engineering student at the <a href='https://www.google.es/maps/place/Facultad+de+Inform%C3%A1tica+-+UDC/@43.3328886,-8.4131229,17z/data=!4m6!3m5!1s0xd2e7cb3d82865e7:0x426ea83b7a5a451f!4b1!8m2!3d43.3328847!4d-8.4109342?hl=es'>University of A Coruña.</a>
-        I love technology and learning new things. Excited to get out of my comfort zone as well as being challenged with new problems that make me better both professionally and personally.</p>
-<ul>
-    <li><a href="https://github.com/borjasoutoprego"><i class="fa-brands fa-github-square" aria-hidden="true"></i></a></li>
-    <li><a href="https://www.linkedin.com/in/borja-souto-prego-ba8b37236/"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-</ul>  
-</div>
-    </body>
-</html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <main>
+        <h1>Borja Souto</h1>  
+    </main>
+  </body>
+</html> 
