--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>borjasouto.es</title>
-  </head>
-  <body>
-    <main>
-        <h1>Borja Souto</h1>  
-    </main>
-  </body>
-</html> 
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>borjasouto.es</title>
+</head>
+
+<body>
+  <div class="bg-[#141b1f] min-h-screen text-white">
+    <div class="h-[100px] flex flex-col justify-center">
+      <div class="flex flex-row mx-8">
+        <div class="mx-5">inicio</div>
+        <div class="mx-5">sobre mi</div>
+      </div>
+    </div>
+    <div>main</div>
+    <div>footer</div>
+  </div>
+
+</body>
+
+</html>
