--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
 
 <body>
   <div class="bg-[#141b1f] min-h-screen text-white">
-    <div class="h-[100px] flex flex-col justify-center">
-      <div class="flex flex-row mx-96">
-        <div class="mx-10">inicio</div>
-        <div class="mx-10">sobre mi</div>
+    <div class="h-[100px] flex flex-row">
+      <div class="flex flex-col justify-center">1</div>
+      <div class="grow flex justify-center">
+        <div class="w-[600px] flex flex-col justify-center">
+          <div class="flex">
+            <div class="text-xl hover:text-red-500 font-bold">Inicio</div>
+            <div class="ml-8 text-xl hover:text-red-500 font-bold">Sobre mi</div>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col justify-center">3</div>
+    </div>
+    <div class="w-[600px] mx-auto">
+      <div class="mt-40 flex">
+        <div class="bg-gray-700 w-[200px] h-[200px] rounded-full"></div>
+        <div class="flex flex-col ml-4">
+          <div class="font-bold text-8xl">Borja</div>
+          <div class="mt-2 font-bold text-[4.1rem]">Souto Prego</div>
+        </div>
+      </div>
+      <div class="mt-14 text-4xl text-center">I use Data to do things.</div>
+      <div class="mt-6 text-2xl text-center">Data Science and Engeneering student. Passionate about
+        Technology.
       </div>
     </div>
-    <div>main</div>
     <div>footer</div>
   </div>
 
