--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
           <div class="mt-2 font-bold text-[4.1rem]">Souto Prego</div>
         </div>
       </div>
-      <div class="mt-14 text-4xl text-center">I use Data to do things.</div>
-      <div class="mt-6 text-2xl text-center">Data Science and Engeneering student. Passionate about
-        Technology.
+      <div class="mt-14 text-4xl text-center">..........</div>
+      <div class="mt-6 text-2xl text-center">...................................
       </div>
     </div>
     <div>footer</div>
