--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   <title>borjasouto.es</title>
 </head>
 
-<body>
-  <div class="bg-[#141b1f] min-h-screen text-white">
+<body class="bg-[#141b1f]">
+  <div class="min-h-screen text-white">
     <div class="h-[100px] flex flex-row">
-      <div class="flex flex-col justify-center">1</div>
+      <div class="flex flex-col justify-center">
+        <!--meter logo aqui-->
+      </div>
       <div class="grow flex justify-center">
         <div class="w-[600px] flex flex-col justify-center">
-          <div class="flex">
-            <div class="text-xl hover:text-red-500 font-bold">Inicio</div>
-            <div class="ml-8 text-xl hover:text-red-500 font-bold">Sobre mi</div>
+          <div class="flex text-2xl md:text-xl">
+            <a href="./" class="hover:text-red-500 font-bold cursor-pointer">Home</a>
+            <a href="./EjercicioP5.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume
+              📝</a>
           </div>
         </div>
       </div>
-      <div class="flex flex-col justify-center">3</div>
     </div>
     <div class="w-[600px] mx-auto">
       <div class="mt-40 flex">
@@ -30,11 +32,29 @@
           <div class="mt-2 font-bold text-[4.1rem]">Souto Prego</div>
         </div>
       </div>
-      <div class="mt-14 text-4xl text-center">..........</div>
-      <div class="mt-6 text-2xl text-center">...................................
+      <div class="mt-14 text-3xl text-center">Data Scientist based in Galicia.</div>
+      <div class="mt-3 text-xl text-center">Donec eu rhoncus tortor. Duis mollis dictum cursus. Sed vitae nisl eros.
+        Nam faucibus dui at turpis volutpat fringilla.
+      </div>
+      <div class="h-[200px]">
+        <!--meter simbolo aqui-->
+      </div>
+      <div class="text-5xl font-bold text-center"><span
+          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>La
+        habilidad
+        más importante para hacerse rico es ser un
+        aprendiz
+        <!--cosas grandes requieren grandes esfuerzos-->
+        constante.<span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
+      </div>
+      <div class="flex flex-row justify-center mt-14 mb-14">
+        <a href="https://github.com/borjasoutoprego" class="rounded-full" target="_blank"><img src="github.png"
+            alt="GitHub" width="50" height="50" class="cursor-pointer"></a>
+        <div class="w-[64px]"></div>
+        <a href="https://www.linkedin.com/in/borja-souto-prego" class="rounded-full" target="_blank"><img
+            src="linkedin.png" alt="LinkedIn" width="50" height="50" class="cursor-pointer"></a>
       </div>
     </div>
-    <div>footer</div>
   </div>
 
 </body>
