--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="w-[600px] mx-auto">
-      <div class="mt-40 flex">
+      <div class="mt-24 flex">
         <div class="bg-gray-700 w-[200px] h-[200px] rounded-full"></div>
         <div class="flex flex-col ml-4">
           <div class="font-bold text-8xl">Borja</div>
@@ -36,16 +36,12 @@
       <div class="mt-3 text-xl text-center">Donec eu rhoncus tortor. Duis mollis dictum cursus. Sed vitae nisl eros.
         Nam faucibus dui at turpis volutpat fringilla.
       </div>
-      <div class="h-[200px]">
+      <div class="h-[150px]">
         <!--meter simbolo aqui-->
       </div>
       <div class="text-5xl font-bold text-center"><span
-          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>La
-        habilidad
-        más importante para hacerse rico es ser un
-        aprendiz
-        <!--cosas grandes requieren grandes esfuerzos-->
-        constante.<span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
+          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>In God we trust. All others bring data.
+        <span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
       </div>
       <div class="flex flex-row justify-center mt-14 mb-14">
         <a href="https://github.com/borjasoutoprego" class="rounded-full" target="_blank"><img src="github.png"
