--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-[#141b1f]">
-  <div class="min-h-screen text-white">
+  <div class="min-h-screen text-white ">
     <div class="h-[100px] flex flex-row">
       <div class="flex flex-col justify-center">
         <!--meter logo aqui-->
@@ -40,7 +40,8 @@
         <!--meter simbolo aqui-->
       </div>
       <div class="text-5xl font-bold text-center"><span
-          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>In God we trust. All others bring data.
+          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>In God we trust. <br />All others bring
+        data.
         <span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
       </div>
       <div class="flex flex-row justify-center mt-14 mb-14">
