--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>borjasouto.es</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body class="bg-[#141b1f]">
+<body class="bg-[#141b1f] font-['Open_Sans']">
   <div class="min-h-screen text-white ">
     <div class="h-[100px] flex flex-row">
       <div class="flex flex-col justify-center">
