--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="icon" href="B.png">
 </head>
 
 <body class="bg-[#141b1f] font-['Open_Sans']">
   <div class="min-h-screen text-white ">
     <div class="h-[100px] flex flex-row">
-      <div class="flex flex-col justify-center">
-        <!--meter logo aqui-->
+      <div class="flex flex-col justify-center ml-16">
+        <img src="B.png" alt="" width="25" height="25" class="cursor-pointer"></a>
       </div>
       <div class="grow flex justify-center">
         <div class="w-[600px] flex flex-col justify-center">
@@ -35,9 +36,8 @@
           <div class="mt-2 font-bold text-[4.1rem]">Souto Prego</div>
         </div>
       </div>
-      <div class="mt-14 text-3xl text-center">Data Scientist based in Galicia.</div>
-      <div class="mt-3 text-xl text-center">Donec eu rhoncus tortor. Duis mollis dictum cursus. Sed vitae nisl eros.
-        Nam faucibus dui at turpis volutpat fringilla.
+      <div class="mt-14 text-3xl text-center">I use Big Data to provide Big Value.</div>
+      <div class="mt-3 text-xl text-center">Data Science and Engeneering. Based in A Coruña, Spain.
       </div>
       <div class="h-[150px]">
         <!--meter simbolo aqui-->
