change home colour

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="grow flex justify-center">
         <div class="w-[600px] flex flex-col justify-center">
           <div class="flex text-2xl md:text-xl">
-            <a href="./" class="hover:text-red-500 font-bold cursor-pointer">Home</a>
+            <a href="./" class="hover:text-blue-400 font-bold cursor-pointer">Home</a>
             <a href="./EjercicioP5.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume
               📝</a>
           </div>
@@ -30,7 +30,9 @@
     </div>
     <div class="w-[600px] mx-auto">
       <div class="mt-24 flex">
-        <div class="bg-gray-700 w-[200px] h-[200px] rounded-full"></div>
+        <div class="bg-gray-700 w-[200px] h-[200px] rounded-full">
+
+        </div>
         <div class="flex flex-col ml-4">
           <div class="font-bold text-8xl">Borja</div>
           <div class="mt-2 font-bold text-[4.1rem]">Souto Prego</div>
