--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="w-[600px] mx-auto">
       <div class="mt-24 flex">
         <div class="bg-gray-700 w-[200px] h-[200px] rounded-full">
-
+          <img src="profile.png" alt="profile" class="w-[200px] h-[200px] rounded-full" target="_blank">
         </div>
         <div class="flex flex-col ml-4">
           <div class="font-bold text-8xl">Borja</div>
