--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="mt-14 text-3xl text-center">I use Big Data to provide Big Value.</div>
       <div class="mt-3 text-xl text-center">Data Science and Engeneering. Based in A Coruña, Spain.
       </div>
-      <div class="h-[150px]">
+      <div class="h-[125px]">
         <!--meter simbolo aqui-->
       </div>
       <div class="text-5xl font-bold text-center"><span
-          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>In God we trust. <br />All others bring
-        data.
+          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>In God we trust. <br />All others must
+        bring data.
         <span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
       </div>
       <div class="flex flex-row justify-center mt-14 mb-14">
