change logos and more

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="grow flex justify-center">
         <div class="w-[600px] flex flex-col justify-center">
           <div class="flex text-2xl md:text-xl">
-            <a href="./" class="hover:text-blue-400 font-bold cursor-pointer">Home</a>
+            <a href="./" class="hover:text-gray-500 font-bold cursor-pointer">Home</a>
             <a href="./EjercicioP5.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume
               📝</a>
           </div>
@@ -50,11 +50,17 @@
         <span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
       </div>
       <div class="flex flex-row justify-center mt-14 mb-14">
-        <a href="https://github.com/borjasoutoprego" class="rounded-full" target="_blank"><img src="github.png"
-            alt="GitHub" width="50" height="50" class="cursor-pointer"></a>
+        <a href="https://github.com/borjasoutoprego"
+          class="flex justify-center font-bold text-lg hover:text-gray-500 cursor-pointer" target=" _blank">
+          <div class="rounded-full mr-4"><img src="github.png" alt="GitHub" width="30" height="30"
+              class="cursor-pointer"></div>GitHub
+        </a>
         <div class="w-[64px]"></div>
-        <a href="https://www.linkedin.com/in/borja-souto-prego" class="rounded-full" target="_blank"><img
-            src="linkedin.png" alt="LinkedIn" width="50" height="50" class="cursor-pointer"></a>
+        <a href="https://www.linkedin.com/in/borja-souto-prego"
+          class="flex justify-center font-bold text-lg hover:text-[#0a66c2] cursor-pointer" target="_blank">
+          <div class="rounded-full mr-4"><img src="linkedin.png" alt="LinkedIn" width="30" height="30"
+              class="cursor-pointer"></div>LinkedIn
+        </a>
       </div>
     </div>
   </div>
