--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <div class="min-h-screen text-white ">
     <div class="h-[100px] flex flex-row">
       <div class="flex flex-col justify-center ml-16">
-        <img src="B.png" alt="" width="25" height="25" class="cursor-pointer"></a>
+        <img src="B.png" alt="" width="25" height="25"></a>
       </div>
       <div class="grow flex justify-center">
         <div class="w-[600px] flex flex-col justify-center">
           <div class="flex text-2xl md:text-xl">
             <a href="./" class="hover:text-gray-500 font-bold cursor-pointer">Home</a>
-            <a href="./EjercicioP5.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume
+            <a href="./CV.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume
               📝</a>
           </div>
         </div>
