--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
       <div class="h-[125px]">
         <!--meter simbolo aqui-->
       </div>
-      <div class="text-5xl font-bold text-center"><span
-          class="float-left text-gray-500 text-8xl relative bottom-2">"</span>In God we trust. <br />All others must
-        bring data.
-        <span class="float-right text-gray-500 text-8xl relative bottom-2">"</span>
+      <div class="text-5xl font-bold text-center flex justify-center">
+        <div class="float-left text-gray-500 text-8xl relative bottom-2">"</div>
+        <div>You can´t<br />improve what<br />you
+          don´t<br />measure.</div>
+        <div class="float-right text-gray-500 text-8xl relative bottom-2">"</div>
       </div>
       <div class="flex flex-row justify-center mt-14 mb-14">
         <a href="https://github.com/borjasoutoprego"
