--- a/index.html
+++ b/index.html
@@ -13,48 +13,47 @@
 </head>
 
 <body class="bg-[#141b1f] font-['Open_Sans']">
-  <div class="min-h-screen text-white ">
+  <div class="min-h-screen text-white">
     <div class="h-[100px] flex flex-row">
       <div class="grow flex justify-center">
-        <div class="w-[600px] flex flex-col justify-center">
-          <div class="flex text-2xl md:text-xl">
-            <img src="B.png" alt="" width="25" height="25"></a>
+        <div class="w-full md:w-[50%] flex flex-col justify-center">
+          <div class="flex text-2xl md:text-xl ml-14">
+            <img src="B.png" alt="" width="25" height="25">
             <a href="./" class="ml-12 hover:text-gray-500 font-bold cursor-pointer">Home</a>
-            <a href="./CV.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume
-              📝</a>
+            <a href="./CV.pdf" class="ml-8 hover:text-red-500 font-bold cursor-pointer" target="_blank">Resume 📝</a>
+          </div>
+          <div>
           </div>
         </div>
       </div>
     </div>
-    <div class="w-[600px] mx-auto">
-      <div class="mt-24 flex">
-        <div class="bg-gray-700 w-[200px] h-[200px] rounded-full">
-          <img src="profile.png" alt="profile" class="w-[200px] h-[200px] rounded-full" target="_blank">
+    <div class="w-full md:w-[50%] mx-auto">
+      <div class="mt-18 flex justify-center items-center">
+        <div class="bg-gray-700 w-[50%] h-[50%] md:w-[15%] md:h-[15%] rounded-full">
+          <img src="profile.png" alt="profile" class="w-full h-full rounded-full object-cover" target="_blank">
         </div>
         <div class="flex flex-col ml-4">
-          <div class="font-bold text-8xl">Borja</div>
-          <div class="mt-2 font-bold text-[4.1rem]">Souto Prego</div>
+          <div class="font-bold text-[5.1rem] md:w-[50%] md:h-[50%]">Borja</div>
+          <div class="mt-2 font-bold text-6xl md:w-[50%] md:h-[50%]">Souto Prego</div>
         </div>
       </div>
       <div class="mt-14 text-3xl text-center">I use Big Data to provide Big Value.</div>
-      <div class="mt-3 text-xl text-center">Data Science and Engeneering. Based in A Coruña, Spain.
-      </div>
-      <div class="h-[125px]">
-        <!--meter simbolo aqui-->
+      <div class="mt-3 text-xl text-center">Data Science and Engineering. Based in A Coruña, Spain.</div>
+      <div class="h-[65px]">
+        <!-- Meter símbolo aquí -->
       </div>
       <div class="text-5xl font-bold text-center flex justify-center">
-        <div class="float-left text-gray-500 text-8xl relative bottom-2">"</div>
-        <div>You can´t<br />improve what<br />you
-          don´t<br />measure.</div>
-        <div class="float-right text-gray-500 text-8xl relative bottom-2">"</div>
+        <div class="float-left text-gray-500 text-8xl md:text-4xl relative bottom-2">"</div>
+        <div>You can't<br />improve what<br />you don't<br />measure.</div>
+        <div class="float-right text-gray-500 text-8xl md:text-4xl relative bottom-2">"</div>
       </div>
       <div class="flex flex-row justify-center mt-14 mb-14">
         <a href="https://github.com/borjasoutoprego"
-          class="flex justify-center font-bold text-lg hover:text-gray-500 cursor-pointer" target=" _blank">
+          class="flex justify-center font-bold text-lg hover:text-gray-500 cursor-pointer" target="_blank">
           <div class="rounded-full mr-4"><img src="github.png" alt="GitHub" width="30" height="30"
               class="cursor-pointer"></div>GitHub
         </a>
-        <div class="w-[64px]"></div>
+        <div class="w-[8%] md:w-[4%]"></div>
         <a href="https://www.linkedin.com/in/borja-souto-prego"
           class="flex justify-center font-bold text-lg hover:text-[#0a66c2] cursor-pointer" target="_blank">
           <div class="rounded-full mr-4"><img src="linkedin.png" alt="LinkedIn" width="30" height="30"
@@ -63,7 +62,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
