--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="mt-2 font-bold text-6xl md:w-[50%] md:h-[50%]">Souto Prego</div>
         </div>
       </div>
-      <div class="mt-14 text-3xl text-center">I use Big Data to provide Big Value.</div>
+      <div class="mt-14 text-3xl text-center">Welcome to my personal portfolio!</div>
       <div class="mt-3 text-xl text-center">Data Science and Engineering. Based in A Coruña, Spain.</div>
       <div class="h-[65px]">
         <!-- Meter símbolo aquí -->
